--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ target/
 *.ipr
 *.yml
 *.properties
+*.yaml
 
 ### NetBeans ###
 /nbproject/private/
@@ -33,3 +34,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Secure bundle file ###
+src/main/resources/secure-connect-akgarg0472.zip
